# jaffle_shop_duckdb

./: .gitignore  .sqlfluff  README.md  RELEASE.md  Taskfile.yml  dbt_project.yml  main.py  package-lock.yml  profiles.yml  pyproject.toml
models/: orders.sql
models/marts/: customers.sql  locations.sql  order_items.sql  order_items.yml  orders.sql  orders.yml  products.sql  supplies.sql
models/staging/: stg_customers.sql  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
