[project]
name = "jaffle-shop-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.2",
    "sqlfluff>=3.3.1",
    "sqlfluff-templater-dbt>=3.3.1",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.3.1",
]
